--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,7 @@
     border-bottom: 3px solid #ff4b2b;
     width: 100%;
     font-size: 2rem;
+    font-weight: bold;
 }
 
 .block-heading-right {
@@ -47,4 +48,14 @@
     width: 100%;
     font-size: 2rem;
     text-align: right;
+    font-weight: bold;
+}
+
+.big-header {
+    font-size: 34pt;
+    font-weight: bold;
+}
+
+.light-border {
+    border-bottom: 1px solid #696969;
 }
